all are working now